--- a/assets/style.css
+++ b/assets/style.css
@@ -21,7 +21,7 @@
 /* QUIZ BODY*/
 
 body {
-    font-family: ;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #f6e5eb;
 }
 
